# yolocam

./: CMakeLists.txt  README.md  build.sh  config.ini  config.json  main.cpp  yolocam_config.c
cmake/: toolchainfile-arm64.cmake  toolchainfile-rv1106.cmake
hardware/camera/: SOLOLINKER_GC2093.PcbDoc
hardware/case/: sololinker-shell-simple.STEP  yolo-cam-div.STEP
include/: xf86drm.h
model/cat/: labels.txt
src/: image_pkt.c  image_pkt.h  osd_draw.h  postprocess.cc  postprocess.h  ptr_queue.c  ptr_queue.h  rkdrm_display.c  rknn_runner.cpp  rknn_runner.h  rxi_ini.c  rxi_ini.h  serial_comm.c  serial_comm.h  v4l2_device.c  v4l2_device.h
src/allocator/: dma_alloc.cpp  drm_alloc.cpp
src/utils/: draw_utils.c
